# track

./: .gitignore  .implementation_plan.md  ALIAS_FORCE_FEATURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_SKILL_UPDATE_REPORT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  ISSUE_track_todo_done_base_worktree_not_found.md  PROJECT_STRUCTURE.md  README.md
.agents/plugins/: marketplace.json
.cargo/: mutants.toml
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/scripts/: generate_release_notes.py
.github/workflows/: ci.yml  release.yml
completions/: README.md  _track  _track.dynamic  _track.ps1  track.bash  track.bash.dynamic  track.fish
docs/: BRANCH_STRATEGY.md  FUNCTIONAL_SPEC.md  JJ_INTEGRATION.md  LLM_HELP_DESIGN.md  LLM_INTEGRATION.md  TASK_DESCRIPTION_DESIGN.md  TESTING.md  TEST_SUMMARY.md  TODAY_TASK.md  TODO_INDEX_DESIGN.md  USAGE_EXAMPLES.md  WORKTREE_SYNC_DESIGN.md  jj_workflow_design.md  task_scoped_ids_refactor.md
docs/implementation_plans/: section_rev_refactor.md  task_8_close_worktrees.md
scripts/: install-agents.sh  validate_package.py
skills/: INSTALL.md  README.md  create-task-workflow.md  execute-task-workflow.md
skills/task-management/: SKILL.md
skills/track/: SKILL.md
skills/track-advanced/: SKILL.md
skills/track-task-execute/: SKILL.md
skills/track-task-setup/: SKILL.md
src/: lib.rs  main.rs
src/cli/: handler.rs  mod.rs
src/db/: migrate.rs  mod.rs  row_mapping.rs
src/models/: jj.rs  mod.rs  status.rs  todo_action.rs  todo_add_options.rs  vcs_mode.rs  workflow.rs
src/ports/: app_state.rs  mod.rs
src/services/: agent_context.rs  agents_md.rs  git_worktree.rs  jj_task.rs  link_service.rs  mod.rs  repo_service.rs  task_service.rs  todo_service.rs  worktree_service.rs
src/use_cases/: apply_todo_action.rs  archive_task.rs  complete_todo.rs  create_today_task.rs  delete_todo.rs  get_task_info.rs  migrate_legacy_worktrees.rs  mod.rs  sync_task.rs  todo_workspace.rs
src/utils/: error.rs  mod.rs
src/webui/: error.rs  mod.rs  routes.rs  server.rs  sse.rs  state.rs  templates.rs  view.rs
templates/: agents-track.md  base.html  index.html
templates/partials/: calendar.html  description.html  links.html  repos.html  scrap_list.html  ticket.html  todo_list.html  workflow.html
tests/: cli_handler_test.rs  db_migration_test.rs  integration_test.rs  output_handler_test.rs  webui_routes_test.rs  worktree_integration_test.rs  worktree_no_base_test.rs
tests/common/: jj.rs  mod.rs
(+32 files in other folders)
