[package]
name = "track"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
tempfile = "3.24.0"
