[package]
name = "track"
version = "0.1.0"
edition = "2021"
authors = ["manji0"]
description = "A Git worktree-based task and TODO management CLI tool"
license = "MIT"
repository = "https://github.com/manji0/track"
keywords = ["cli", "task-management", "git", "worktree", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
tempfile = "3.24.0"
