[package]
name = "track"
version = "0.3.0"
edition = "2021"
authors = ["manji0"]
description = "A Git worktree-based task and TODO management CLI tool"
license = "MIT"
repository = "https://github.com/manji0/track"
keywords = ["cli", "task-management", "git", "worktree", "productivity"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled"] }
directories = "6.0"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
prettytable-rs = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Web server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }

# Templating
minijinja = { version = "2.0", features = ["loader"] }

# Real-time updates (SSE)
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Browser opening
open = "5.0"

[dev-dependencies]
tempfile = "3.24.0"
